# RL-Trading-System-Architecture-Explorer

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: backtest-parity.yml  python-app.yml
dashboard/backend/: __init__.py  fastapi_backend.py  main.py
dashboard/frontend/: App.jsx  index.html  package-lock.json  package.json  vite.config.js
dashboard/frontend/src/: index.css  main.jsx
data_platform/: pipeline.py
data_platform/connectors/: binance_connector.py
data_platform/feature_store/: registry.py
infra/docker/: Dockerfile
infra/k8s/: kubernetesfile
mlops/hyperparam_opt/: Optimizer.py
mlops/registry/: model_registry.py
qts_core/alpha/: features.py
qts_core/envs/: TradingEnv.py
qts_core/execution/: executor.py
qts_core/models/: RL_trainer.py
qts_core/portfolio/: ledger.py
qts_core/risk/: manager.py
research/templates/: research_templates.py
tests/integration/: test.py
tests/unit/: Ledger_tests.py
