[tool.poetry]
name = "enterprise_rl_trading"
version = "0.1.0"
description = "Institutional-grade Reinforcement Learning Trading System"
authors = ["Quant Lead <lead@quantfund.com>"]
readme = "README.md"
packages = [{include = "qts_core"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core ML & RL
torch = "^2.2.0"
ray = {extras = ["rllib", "tune"], version = "^2.9.0"}
gymnasium = "0.28.1"
# Data Engineering & Quant Libraries
pandas = "^2.2.0"
numpy = "^1.26.0"
scipy = "^1.12.0"
ta-lib = "^0.4.28" # Common technical indicator library
# MLOps & Telemetry
mlflow = "^2.10.0"
# Backend API & WebSockets for Dashboard
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
websockets = "^12.0"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Tool Configurations ---

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["qts_core", "tests", "data_platform"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (import sorting)
    "UP", # pyupgrade
    "N",  # pep8-naming
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true # Required for heavily compiled C-libs like Pandas/Torch
exclude = ["research/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=qts_core --cov-report=term-missing"